# tdshell

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  commands.cpp  commands.h  common.h  main.cpp  scopedthread.h  session.cpp  session.h  tdchannel.cpp  tdchannel.h  tdcore.cpp  tdcore.h  tdexample.cpp  tdshell.cpp  tdshell.h  utils.cpp  utils.h
